# EDS-BWT

./: .gitmodules  CMakeLists.txt  EDS-BWTransform.sh  EDSBWT.cpp  EDSBWTsearch  EDSBWTsearch.cpp  EDSBWTsearch.hpp  EOFpos_to_everything.cpp  LICENSE  MOVE_EDSBWTSearch.cpp  MOVE_EDSBWTSearch.hpp  M_LF_build.cpp  Parameters.h  README.md  Sorting.cpp  Sorting.h  build.sh  build_MLF.cpp  da_to_everything.cpp  dependencies.mk  eds_to_ebwt.sh  eds_to_fasta.cpp  execute_MOVE_EDSBWTSearch.sh  extract_patterns_from_msa.py  generate_Patterns.sh  generate_Patterns_from_file.py  launch.sh  launch_COVID.sh  mainEDS-BWT.cpp  mainMove_EDSBWT.cpp  makefile  stringCheck  stringCheck.cpp
sample/test/: kmers.txt
test/ExamplePaper/: examplePaper.bitvector  examplePaper.ebwt  examplePaper.eds  examplePaper_bv_0.aux  examplePaper_bv_1.aux  examplePaper_bv_2.aux  examplePaper_bv_3.aux  examplePaper_bv_4.aux  examplePaper_bwt_0.aux  examplePaper_bwt_1.aux  examplePaper_bwt_2.aux  examplePaper_bwt_3.aux  examplePaper_bwt_4.aux  examplePaper_info.aux
test/test/: kmerTATT.txt  test.bitvector  test.ebwt  test.eds  test_bv_0.aux  test_bv_1.aux  test_bv_4.aux  test_bwt_0.aux  test_bwt_4.aux  test_info.aux
